Opening Page and linked html page

--- a/public/index.html
+++ b/public/index.html
@@ -1,13 +1,45 @@
 <!DOCTYPE html>
 <html>
-  <head lang="en">
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <title>Hello Html</title>
-    <link rel="shortcut icon" href="/favicon.ico" />
-    <link rel="stylesheet" href="/screen.css" />
-  </head>
-  <body>
-    <h1 class="hello-world">Hello, World!</h1>
-  </body>
+
+<head lang="en">
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1" />
+  <title>Hello Html</title>
+  <link rel="shortcut icon" href="/favicon.ico" />
+  <link rel="stylesheet" href="/screen.css" />
+</head>
+
+<body>
+  <h1 class="hello-world">Hello, Cohort-20!</h1>
+  <img width="900" src="Primates.jpg" />
+  <h2>Today we will be taking about primate conservation.</h2>
+  <h3>The reasons we need to be worried about primate conservation are as follows:</h3>
+  <ol>
+    <li> Primates serve as a key functions for the environment they inhabit. </li>
+    <li> Primates provide a unique insight into human evolution.</li>
+    <li> Primates are an umbrella species.This means that in order to stop their extinction the entire rain forest must
+      also be conserved. Therefore their conservation benefits the entire ecosystem </li>
+    <li> 10 percent of the worlds species live in the rain forest. </li>
+    <li> Most importantly the rain forest produces a vast amount of oxygen for our planet.</li>
+  </ol>
+
+  <h3>The primates that are closest to extinction:</h3>
+  <ul>
+    <p> 60% of primate species are threatened with extinction.</p>
+    <li> Aye-Aye</li>
+    <li> Rondo Dwarf Galago</li>
+    <li> Colobus Monkeys</li>
+    <li> Western Chimpanzee</li>
+    <li> Javan Slow Loris</li>
+    <li> Langur</li>
+    <li> Gaoligong Hoolock Gibbon</li>
+    <li> Tapanuli Orangutan</li>
+    <li> Brown Howler Monkey</li>
+    <li> Spider Monkey</li>
+
+    <p> The List goes on...</p>
+  </ul>
+  <p> What you can do to <a href="primates2.html">help</a></p>
+</body>
+
 </html>
