Updated primates2 html

--- a/public/primates2.html
+++ b/public/primates2.html
@@ -11,17 +11,27 @@
 
 <body>
   <h1 class="hello-world">Congrats, you have come to help!</h1>
+  <img width="600" src="indri.jpg" />
   <h2>What can I do?</h2>
   <ul>
     <li> Do not support the pet trade! </li>
+    <li> Avoid foods with un sustainable Palm Oil</li>
     <li> Don't support any companies that are using primates for biomedical research</li>
-  </ul>
-  <h2><strong>Donate</strong></h2>
-  <ul>
-
-    <li> <a href="https://www.globalwildlife.org/project/primates">Global Wildlife Conservation</a></li>
-    <li> <a href="https://neoprimate.org/">NeoTropical Primate Conservation</a> </li>
-    <li><a href="https://orangutan.org/our-projects/research/camp-leakey/">Orangutan Foundation International</a></li>
+    <li> Support companies that have sustainable practices</li>
+    <li> Choose products that give back to an environmental cause</li>
+    <li> Reduce your carbon footprint by driving less and even turning down your thermostat.</li>
+    <li> Volunteer your time</li>
+    <li> Host a fundraiser</li>
+    <li> Contact your elected representatives</li>
+    <li> Support indigenous communities</li>
+    <li> Donate
+      <ul>
+        <li> <a href="https://www.globalwildlife.org/project/primates">Global Wildlife Conservation</a></li>
+        <li> <a href="https://neoprimate.org/">NeoTropical Primate Conservation</a> </li>
+        <li><a href="https://orangutan.org/our-projects/research/camp-leakey/">Orangutan Foundation International</a>
+        </li>
+      </ul>
+    </li>
   </ul>
 
 
