--- a/public/index.html
+++ b/public/index.html
@@ -11,17 +11,28 @@
 
 <body>
   <h1 class="hello-world">Hello, Cohort-20!</h1>
-  <img width="900" src="Primates.jpg" />
   <h2>Today we will be taking about primate conservation.</h2>
+  <img width="900" src="Primates.jpg" />
   <h3>The reasons we need to be worried about primate conservation are as follows:</h3>
   <ol>
-    <li> Primates serve as a key functions for the environment they inhabit. </li>
+    <li> Primates serve as a key functions for the environment they inhabit. This includes a key part in regeneration of
+      the rain forest. </li>
     <li> Primates provide a unique insight into human evolution.</li>
     <li> Primates are an umbrella species.This means that in order to stop their extinction the entire rain forest must
-      also be conserved. Therefore their conservation benefits the entire ecosystem </li>
+      also be conserved. Therefore their conservation benefits the entire ecosystem. </li>
     <li> 10 percent of the worlds species live in the rain forest. </li>
     <li> Most importantly the rain forest produces a vast amount of oxygen for our planet.</li>
+    <p> It is also important to note that the rain forest floor stores a vast amount of carbon. This reduces the amount
+      of carbon going into our atmosphere. However, when the forest is burned down this releases that carbon storage
+      into the atmosphere.</p>
   </ol>
+  <h3> Why is the rain forest being cut down?</h3>
+  <p> Most of the rain forest are being cut down in order to make more space for production. Due to the growing
+    population and the growing demand for resources space needs to be cleared. The forests are being cut down for palm
+    plantations, sugar cane, cattle, etc. However, the rain forest floor is actually nutrient poor. This means that when
+    it is used for production it is quickly depleted of those vital nutrients needed for crops or grass. Therefore, more
+    forest is needed to cut down in order to continue production and leave the old land to turn to a desert. </p>
+
 
   <h3>The primates that are closest to extinction:</h3>
   <ul>
@@ -39,6 +50,13 @@
 
     <p> The List goes on...</p>
   </ul>
+  <p><strong>Why do I care about rain forest and Primate conservation?</strong></p>
+  <p> I realized when I was very young that a lot of the species I have known to love might not exist in the next 10, 5
+    or even 2 years.It really upset me that I had been going about my day unaware of the catastrophe. Soon I found out
+    that the forests were illegally being cut down as hundreds of animals were being killed in the blaze. It baffled me
+    that such a thing could be happening with no regard for future generations or our planet. I decided that I would
+    always keep my finger on the pulse of conservation and do what I can to help no matter how big or small.
+  </p>
   <p> What you can do to <a href="primates2.html">help</a></p>
 </body>
 
