--- a/public/index.html
+++ b/public/index.html
@@ -57,7 +57,7 @@
     that such a thing could be happening with no regard for future generations or our planet. I decided that I would
     always keep my finger on the pulse of conservation and do what I can to help no matter how big or small.
   </p>
-  <p> What you can do to <a href="primates2.html">help</a></p>
+  <p> What you can do to <a href="index2.html">help</a></p>
 </body>
 
 </html>
