--- a/public/index.html
+++ b/public/index.html
@@ -11,7 +11,7 @@
 
 <body>
   <h1 class="hello-world">Hello, Cohort-20!</h1>
-  <h2>Today we will be taking about primate conservation.</h2>
+  <h2>Today we will be talking about primate conservation.</h2>
   <img width="900" src="Primates.jpg" />
   <h3>The reasons we need to be worried about primate conservation are as follows:</h3>
   <ol>
