--- a/public/index.html
+++ b/public/index.html
@@ -12,7 +12,7 @@
 <body>
   <h1 class="hello-world">Hello, Cohort-20!</h1>
   <h2>Today we will be talking about primate conservation.</h2>
-  <img width="900" src="Primates.jpg" />
+  <img width="900" src="Primates.jpg" alt="This is a collage of a couple different primates" />
   <h3>The reasons we need to be worried about primate conservation are as follows:</h3>
   <ol>
     <li> Primates serve as a key functions for the environment they inhabit. This includes a key part in regeneration of
