--- a/public/index2.html
+++ b/public/index2.html
@@ -11,7 +11,7 @@
 
 <body>
   <h1 class="hello-world">Congrats, you have come to help!</h1>
-  <img width="600" src="indri.jpg" />
+  <img width="600" src="indri.jpg" alt="This is a picture of an indri which is a type lemur" />
   <h2>What can I do?</h2>
   <ul>
     <li> Do not support the pet trade! </li>
