--- a/public/index2.html
+++ b/public/index2.html
@@ -6,7 +6,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <title>Hello Html</title>
   <link rel="shortcut icon" href="/favicon.ico" />
-  <link rel="stylesheet" href="/screen.css" />
+  <link rel="stylesheet" href="/second.css" />
 </head>
 
 <body>
@@ -33,6 +33,7 @@
       </ul>
     </li>
   </ul>
+  <p class="index"> <a href="index.html">Primate Conservation</a></p>
 
 
 </body>
